# magnetite

./: .env  Cargo.toml
migration/src/: lib.rs  m20240123_171510_create_downloads_table.rs
src/: main.rs
src/entities/: download.rs  mod.rs  prelude.rs
src/handlers/: downloads.rs
src/plugins/: mega.rs  mod.rs
