[package]
name = "magnetite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
headless_chrome = { version = "1.0.8", features = ["fetch"] }
mega = "0.7.0"
regex = "1.10.3"
reqwest = "0.11.23"
sea-orm = { version = "0.12.12", features = ["sqlx-postgres","runtime-tokio-rustls"] }
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features=["macros","rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
chrono = "0.4.32"
